--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-dpkg (1.14.27) UNRELEASED; urgency=low
+dpkg (1.14.27) stable; urgency=low
 
   * Cherry-pick some fixes from squeeze concerning new source formats:
     - dpkg-source now accepts additional tarballs (in format "3.0 (quilt)")
@@ -13,7 +13,7 @@ dpkg (1.14.27) UNRELEASED; urgency=low
     - call quilt only once to apply all patches instead of once per patch
       when building 3.0 (quilt) source packages. Closes: #518453
 
- -- Raphael Hertzog <hertzog@debian.org>  Thu, 09 Apr 2009 20:32:31 +0200
+ -- Raphael Hertzog <hertzog@debian.org>  Fri, 13 Nov 2009 17:45:15 +0100
 
 dpkg (1.14.26) unstable; urgency=low
 
