Update German translation of manual pages
Update to 1650t.

--- a/man/po/de.po
+++ b/man/po/de.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2009-11-13 12:17+0100\n"
-"PO-Revision-Date: 2009-11-11 20:38+0100\n"
+"PO-Revision-Date: 2009-11-13 21:10+0100\n"
 "Last-Translator: Helge Kreutzmann <debian@helgefjell.de>\n"
 "Language-Team: de <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -3713,11 +3713,6 @@ msgstr "B<processing: >I<Stufe>B<: >I<Paket>"
 
 #. type: Plain text
 #: dpkg.1:546
-#, fuzzy
-#| msgid ""
-#| "Sent just before a processing stage starts. I<stage> is one of "
-#| "B<upgrade>, B<install> (both sent before unpacking), B<configure>, "
-#| "B<trigproc>, B<remove>, B<purge>."
 msgid ""
 "Sent just before a processing stage starts. I<stage> is one of B<upgrade>, "
 "B<install> (both sent before unpacking), B<configure>, B<trigproc>, "
@@ -3725,7 +3720,7 @@ msgid ""
 msgstr ""
 "Versandt genau bevor eine Verarbeitungsstufe beginnt. I<Stufe> ist eine der "
 "folgenden: B<upgrade>, B<install> (beide werden vor dem Entpacken versandt), "
-"B<configure>, B<trigproc>, B<remove>, B<purge>."
+"B<configure>, B<trigproc>, B<disappear>, B<remove>, B<purge>."
 
 #. type: TP
 #: dpkg.1:547
@@ -9712,7 +9707,6 @@ msgstr ""
 msgid "B<-Z>I<compression>"
 msgstr "B<-Z>I<Komprimierung>"
 
-# FOOBAR
 #. type: Plain text
 #: dpkg-source.1:126
 msgid ""
