Remerge with HEAD

--- a/debian/changelog
+++ b/debian/changelog
@@ -97,6 +97,7 @@ dpkg (1.15.5) UNRELEASED; urgency=low
   * Polish (Wiktor Wandachowicz). Closes: #548541
   * Swedish (Peter Krefting).
   * French (Christian Perrier).
+  * Italian (Milo Casagrande). Closes: #555806
 
   [ Updated dselect translations ]
   * Czech (Miroslav Kure).
