--- a/man/dpkg-source.1
+++ b/man/dpkg-source.1
@@ -116,7 +116,7 @@ Override or add an output control file field.
 .BI \-U field
 Remove an output control file field.
 .TP
-.BR \-Z \fIcompression\fP
+.BR \-Z "\fIcompression\fP, " \-\-compression =\fIcompression\fP
 Specify the compression to use for created files (tarballs and diffs).
 Note that this option will not cause existing tarballs to be recompressed,
 it only affects new files. Supported values are:
@@ -124,7 +124,7 @@ it only affects new files. Supported values are:
 \fIgzip\fP is the default. \fIxz\fP is only supported since
 dpkg-dev 1.15.5.
 .TP
-.BR \-z \fIlevel\fP
+.BR \-z "\fIlevel\fP, " \-\-compression\-level =\fIlevel\fP
 Compression level to use. As with \fB\-Z\fP it only affects newly created
 files. Supported values are:
 .IR 1 " to " 9 ", " best ", and " fast .
@@ -509,14 +509,24 @@ This file contains a list of binary files (one per line) that should be
 included in the debian tarball. Leading and trailing spaces are stripped.
 Lines starting with "#" are comments and are skipped. Empty lines are ignored.
 .SS debian/source/options
-This file contains a list of options that should be automatically
+This file contains a list of long options that should be automatically
 prepended to the set of command line options of a \fBdpkg\-source \-b\fR
-or \fBdpkg\-source \-\-print\-format\fR call. Options like \fB\-Z\fR and
-\fB\-z\fR are well suited for this file.
+or \fBdpkg\-source \-\-print\-format\fR call. Options like
+\fB\-\-compression\fR and \fB\-\-compression\-level\fR are well suited for
+this file.
 .P
 Each option should be put on a separate line. Empty lines and lines
-starting with "#" are ignored. \fB\-\-format\fR options are not accepted
-in this file, you should use \fBdebian/source/format\fR instead.
+starting with "#" are ignored. The leading "--" should be
+stripped and short options are not allowed. Optional spaces are allowed
+around the "=" symbol and optional quotes are allowed around the value.
+Here's an example of such a file:
+.P
+  # let dpkg-source create a debian.tar.bz2 with maximal compression
+  compression = "bzip2"
+  compression-level = 9
+.P
+Note: \fBformat\fR options are not accepted in this file, you should
+use \fBdebian/source/format\fR instead.
 .SS debian/patches/series
 This file lists all patches that have to be applied (in the given order)
 on top of the upstream source package. Leading and trailing spaces are
