--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-dpkg (1.15.5) UNRELEASED; urgency=low
+dpkg (1.15.5) unstable; urgency=low
 
   [ Guillem Jover ]
   * Remove obsolete conffiles on purge. Closes: #421367, #453005, #454628
@@ -122,7 +122,7 @@ dpkg (1.15.5) UNRELEASED; urgency=low
   * Polish (Wiktor Wandachowicz). Closes: #548541
   * Swedish (Peter Krefting).
 
- -- Guillem Jover <guillem@debian.org>  Sun, 06 Sep 2009 09:48:45 +0200
+ -- Guillem Jover <guillem@debian.org>  Tue, 17 Nov 2009 10:17:57 +0100
 
 dpkg (1.15.4.1) unstable; urgency=medium
 
