--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-dpkg (1.15.5.1) UNRELEASED; urgency=low
+dpkg (1.15.5.1) unstable; urgency=low
 
   * Fix build failures due to off_t type missmatch caused by not including
     <config.h> first on the unit tests. Suggested by Pierre Habouzit and
     Julien Cristau, thanks!
 
- -- Guillem Jover <guillem@debian.org>  Tue, 17 Nov 2009 16:39:05 +0100
+ -- Guillem Jover <guillem@debian.org>  Tue, 17 Nov 2009 16:42:00 +0100
 
 dpkg (1.15.5) unstable; urgency=low
 
