debian/control: add the accent on my first name

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+dpkg (1.15.6) UNRELEASED; urgency=low
+
+  [ Raphaël Hertzog ]
+  * debian/control: add the accent on my first name
+
+ -- Raphaël Hertzog <hertzog@debian.org>  Tue, 17 Nov 2009 17:24:47 +0100
+
 dpkg (1.15.5.1) unstable; urgency=low
 
   * Fix build failures due to off_t type missmatch caused by not including
