dpkg-shlibdeps: always use Dpkg::Version
Instead of mixing usual scalars with Dpkg::Version objects, always use
Dpkg::Version objects when storing a version.

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,8 @@ dpkg (1.15.5.2) UNRELEASED; urgency=low
   * Change Dpkg::Version API to accept invalid versions by default and add
     is_valid() method. The boolean evaluation of a version object returns
     true if the version is valid, false otherwise.
+  * Update dpkg-shlibdeps to always use Dpkg::Version now that it can
+    contain the empty version string. Closes: #556786
 
  -- Raphael Hertzog <hertzog@debian.org>  Wed, 18 Nov 2009 10:21:53 +0100
 
