--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ dpkg (1.15.5.2) UNRELEASED; urgency=low
     true if the version is valid, false otherwise.
   * Update dpkg-shlibdeps to always use Dpkg::Version now that it can
     contain the empty version string. Closes: #556786
+  * Keep compatibility with perl 5.8 by avoiding the _ prototype.
 
  -- Raphael Hertzog <hertzog@debian.org>  Wed, 18 Nov 2009 10:21:53 +0100
 
