--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-dpkg (1.15.5.2) UNRELEASED; urgency=low
+dpkg (1.15.5.2) unstable; urgency=low
 
   * Change Dpkg::Version API to accept invalid versions by default and add
     is_valid() method. The boolean evaluation of a version object returns
@@ -7,7 +7,7 @@ dpkg (1.15.5.2) UNRELEASED; urgency=low
     contain the empty version string. Closes: #556786
   * Keep compatibility with perl 5.8 by avoiding the _ prototype.
 
- -- Raphael Hertzog <hertzog@debian.org>  Wed, 18 Nov 2009 10:21:53 +0100
+ -- Raphael Hertzog <hertzog@debian.org>  Wed, 18 Nov 2009 11:54:50 +0100
 
 dpkg (1.15.5.1) unstable; urgency=low
 
