Update Swedish translation.
man/po/sv.po: 1656t0f0u.
scripts/po/sv.po: 483t0f0u.

--- a/man/po/sv.po
+++ b/man/po/sv.po
@@ -6,7 +6,7 @@ msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-11-17 10:12+0100\n"
-"PO-Revision-Date: 2009-11-13 13:38+0100\n"
+"PO-Revision-Date: 2009-11-18 12:54+0100\n"
 "Last-Translator: Peter Krefting <peterk@debian.org>\n"
 "Language-Team: Swedish <debian-l10n-swedish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -1490,10 +1490,10 @@ msgstr "deb-substvars"
 
 #. type: TH
 #: deb-substvars.5:2
-#, fuzzy, no-wrap
+#, no-wrap
 #| msgid "2009-08-16"
 msgid "2009-07-15"
-msgstr "2009-08-16"
+msgstr "2009-07-15"
 
 #. type: Plain text
 #: deb-substvars.5:5
@@ -2021,10 +2021,10 @@ msgstr "deb-triggers"
 
 #. type: TH
 #: deb-triggers.5:1 dpkg-trigger.1:1
-#, fuzzy, no-wrap
+#, no-wrap
 #| msgid "2009-08-16"
 msgid "2009-03-15"
-msgstr "2009-08-16"
+msgstr "2009-03-15"
 
 #. type: Plain text
 #: deb-triggers.5:4
@@ -2134,10 +2134,10 @@ msgstr "dpkg"
 
 #. type: TH
 #: dpkg.1:1
-#, fuzzy, no-wrap
+#, no-wrap
 #| msgid "2007-11-19"
 msgid "2009-11-12"
-msgstr "2007-11-19"
+msgstr "2009-11-12"
 
 #. type: TH
 #: dpkg.1:1 dpkg.cfg.5:1 dpkg-deb.1:1 dpkg-query.1:1 dpkg-trigger.1:1
@@ -4070,10 +4070,10 @@ msgstr "dpkg-architecture"
 
 #. type: TH
 #: dpkg-architecture.1:1
-#, fuzzy, no-wrap
+#, no-wrap
 #| msgid "2009-08-16"
 msgid "2009-08-15"
-msgstr "2009-08-16"
+msgstr "2009-08-15"
 
 #. type: Plain text
 #: dpkg-architecture.1:4
@@ -5023,10 +5023,10 @@ msgstr "dpkg-buildpackage"
 
 #. type: TH
 #: dpkg-buildpackage.1:1
-#, fuzzy, no-wrap
+#, no-wrap
 #| msgid "2009-08-16"
 msgid "2009-06-13"
-msgstr "2009-08-16"
+msgstr "2009-06-13"
 
 #. type: Plain text
 #: dpkg-buildpackage.1:4
@@ -7515,10 +7515,10 @@ msgstr "dpkg-parsechangelog"
 
 #. type: TH
 #: dpkg-parsechangelog.1:1
-#, fuzzy, no-wrap
+#, no-wrap
 #| msgid "2009-05-10"
 msgid "2009-05-19"
-msgstr "2009-05-10"
+msgstr "2009-05-19"
 
 #. type: Plain text
 #: dpkg-parsechangelog.1:4
@@ -8157,10 +8157,10 @@ msgstr "dpkg-scanpackages"
 
 #. type: TH
 #: dpkg-scanpackages.1:15 dpkg-scansources.1:1
-#, fuzzy, no-wrap
+#, no-wrap
 #| msgid "2007-10-08"
 msgid "2009-10-01"
-msgstr "2007-10-08"
+msgstr "2009-10-01"
 
 #. type: Plain text
 #: dpkg-scanpackages.1:18
@@ -8512,10 +8512,10 @@ msgstr "dpkg-shlibdeps"
 
 #. type: TH
 #: dpkg-shlibdeps.1:1
-#, fuzzy, no-wrap
+#, no-wrap
 #| msgid "2009-03-09"
 msgid "2009-03-08"
-msgstr "2009-03-09"
+msgstr "2009-03-08"
 
 #. type: Plain text
 #: dpkg-shlibdeps.1:4
@@ -9273,10 +9273,10 @@ msgstr "dpkg-source"
 
 #. type: TH
 #: dpkg-source.1:2
-#, fuzzy, no-wrap
+#, no-wrap
 #| msgid "2007-11-19"
 msgid "2009-11-11"
-msgstr "2007-11-19"
+msgstr "2009-11-11"
 
 #. type: Plain text
 #: dpkg-source.1:5
@@ -9476,7 +9476,7 @@ msgstr ""
 #: dpkg-source.1:118
 #, no-wrap
 msgid "B<-Z>I<compression>, B<--compression>=I<compression>"
-msgstr ""
+msgstr "B<-Z>I<komprimering>, B<--compression>=I<komprimering>"
 
 #. type: Plain text
 #: dpkg-source.1:126
@@ -9495,10 +9495,10 @@ msgstr ""
 
 #. type: TP
 #: dpkg-source.1:126
-#, fuzzy, no-wrap
+#, no-wrap
 #| msgid "B<-z>I<compress_level>"
 msgid "B<-z>I<level>, B<--compression-level>=I<level>"
-msgstr "B<-z>I<komprimeringsnivå>"
+msgstr "B<-z>I<nivå>, B<--compression-level>=I<nivå>"
 
 #. type: Plain text
 #: dpkg-source.1:132
@@ -10441,7 +10441,6 @@ msgstr "debian/source/options"
 
 #. type: Plain text
 #: dpkg-source.1:517
-#, fuzzy
 #| msgid ""
 #| "This file contains a list of options that should be automatically "
 #| "prepended to the set of command line options of a B<dpkg-source -b> or "
@@ -10453,14 +10452,14 @@ msgid ""
 "B<dpkg-source --print-format> call. Options like B<--compression> and B<--"
 "compression-level> are well suited for this file."
 msgstr ""
-"Filen innehåller en lista över flaggor som automatiskt sätts in före "
+"Filen innehåller en lista över långa flaggor som automatiskt sätts in före "
 "kommandoradsflaggorna som anges i ett anrop til B<dpkg-source -b> eller "
-"B<dpkg-source --print-format>. Flaggor som B<-Z> och B<-z> är lämpliga att "
+"B<dpkg-source --print-format>. Flaggor som B<--compression> och "
+"B<--compression-level> är passande att "
 "lägga in i den  här filen."
 
 #. type: Plain text
 #: dpkg-source.1:523
-#, fuzzy
 #| msgid ""
 #| "Each option should be put on a separate line. Empty lines and lines "
 #| "starting with \"#\" are ignored. B<--format> options are not accepted in "
@@ -10473,8 +10472,10 @@ msgid ""
 "a file:"
 msgstr ""
 "Ange varje flagga på en egen rad. Tomma rader och rader som börjar med \"#\" "
-"ignoreras. B<--format>-flaggor tillåts inte i den här filen, du bör använda "
-"filen B<debian/source/format> istället."
+"ignoreras. Inledande \"--\" skall tas bort och korta flaggor är inte "
+"tillåtna. Blanksteg tillåts runt \"=\"-tecknet och citattecken tillåts "
+"runt värdet. Här är ett exempel på en sådan fil:"
+""
 
 #. type: Plain text
 #: dpkg-source.1:527
@@ -10484,10 +10485,12 @@ msgid ""
 "  compression = \"bzip2\"\n"
 "  compression-level = 9\n"
 msgstr ""
+"  # låt dpkg-source skapa en debian.tar.bz2 med maximal komprimering\n"
+"  compression = \"bzip2\"\n"
+"  compression-level = 9\n"
 
 #. type: Plain text
 #: dpkg-source.1:530
-#, fuzzy
 #| msgid ""
 #| "Each option should be put on a separate line. Empty lines and lines "
 #| "starting with \"#\" are ignored. B<--format> options are not accepted in "
@@ -10496,8 +10499,7 @@ msgid ""
 "Note: B<format> options are not accepted in this file, you should use "
 "B<debian/source/format> instead."
 msgstr ""
-"Ange varje flagga på en egen rad. Tomma rader och rader som börjar med \"#\" "
-"ignoreras. B<--format>-flaggor tillåts inte i den här filen, du bör använda "
+"Obsrvera: B<format>-flaggor tillåts inte i den här filen, du bör använda "
 "filen B<debian/source/format> istället."
 
 #. type: SS
@@ -12647,10 +12649,10 @@ msgstr "start-stop-daemon"
 
 #. type: TH
 #: start-stop-daemon.8:1
-#, fuzzy, no-wrap
+#, no-wrap
 #| msgid "2009-02-27"
 msgid "2009-02-26"
-msgstr "2009-02-27"
+msgstr "2009-02-26"
 
 #. type: Plain text
 #: start-stop-daemon.8:4
@@ -13226,10 +13228,10 @@ msgstr "update-alternatives"
 
 #. type: TH
 #: update-alternatives.8:8
-#, fuzzy, no-wrap
+#, no-wrap
 #| msgid "2009-08-16"
 msgid "2009-04-13"
-msgstr "2009-08-16"
+msgstr "2009-04-13"
 
 #. type: Plain text
 #: update-alternatives.8:11
