dpkg-checkbuilddeps: Recognize --help in addition to -h

--- a/man/dpkg-checkbuilddeps.1
+++ b/man/dpkg-checkbuilddeps.1
@@ -1,4 +1,4 @@
-.TH dpkg\-checkbuilddeps 1 "2008-08-18" "Debian Project" "dpkg utilities"
+.TH dpkg\-checkbuilddeps 1 "2009-11-21" "Debian Project" "dpkg utilities"
 .SH NAME
 dpkg\-checkbuilddeps \- check build dependencies and conflicts
 .
@@ -31,7 +31,7 @@ be built.
 Use the given build dependencies/conflicts instead of those contained in the
 \fIdebian/control\fP file.
 .TP
-.B \-h
+.BR \-h ", " \-\-help
 Show the usage message and exit.
 .
 .SH AUTHOR
