--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ dpkg (1.15.6) UNRELEASED; urgency=low
   [ Guillem Jover ]
   * Handle argument parsing in dpkg-checkbuilddeps and dpkg-scanpackages
     in a way consistent with the rest of the tools.
+  * Recognize --help in addition to -h in dpkg-checkbuilddeps.
 
   [ Updated man page translations ]
   * Swedish (Peter Krefting).
