Update German scripts translation
Update to 483t.

--- a/debian/changelog
+++ b/debian/changelog
@@ -14,7 +14,8 @@ dpkg (1.15.6) UNRELEASED; urgency=low
 
   [ Updated scripts translations ]
   * Swedish (Peter Krefting).
-
+  * German (Helge Kreutzmann).
+ 
  -- Raphaël Hertzog <hertzog@debian.org>  Tue, 17 Nov 2009 17:24:47 +0100
 
 dpkg (1.15.5.2) unstable; urgency=low
