dpkg-scanpackages: avoid IO::String usage
Instead we use Dpkg::IPC to get a pipe file descriptor where we can
read the output of dpkg-deb -I.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+dpkg (1.15.5.3) UNRELEASED; urgency=low
+
+  * Avoid usage of IO::String in dpkg-scanpackages, rely on Dpkg::IPC
+    instead to directly get a pipe file descriptor. Closes: #557013
+
+ -- Raphael Hertzog <hertzog@debian.org>  Sat, 21 Nov 2009 14:57:50 +0100
+
 dpkg (1.15.5.2) unstable; urgency=low
 
   * Change Dpkg::Version API to accept invalid versions by default and add
