u-a: Verify that the alternative used in --set has been registered
Give a proper error message instead of failing with an undefined
value when calling the slave method. Additionally verify the alternative
before switching to manual mode, avoiding this way unneeded log messages
in case of error.

Closes: #554136

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,13 @@
 dpkg (1.15.5.3) UNRELEASED; urgency=low
 
+  [ Raphael Hertzog ]
   * Avoid usage of IO::String in dpkg-scanpackages, rely on Dpkg::IPC
     instead to directly get a pipe file descriptor. Closes: #557013
+
+  [ Guillem Jover ]
+  * Verify that the alternative used in update-alternatives --set has been
+    registered instead of failing with an undefined value in the slave
+    method. Closes: #554136
 
  -- Raphael Hertzog <hertzog@debian.org>  Sat, 21 Nov 2009 14:57:50 +0100
 
