dpkg-source: add "3.0 (quilt)" in the (fallback) list of formats to try

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,8 @@ dpkg (1.15.5.3) UNRELEASED; urgency=low
   [ Raphael Hertzog ]
   * Avoid usage of IO::String in dpkg-scanpackages, rely on Dpkg::IPC
     instead to directly get a pipe file descriptor. Closes: #557013
+  * Put "3.0 (quilt)" in the default list of formats tried by dpkg-source
+    after "1.0" and before "3.0 (native)".
 
   [ Guillem Jover ]
   * Verify that the alternative used in update-alternatives --set has been
