dpkg-source: fail if several orig.tar files are available
This concerns formats 2.0 and 3.0 (quilt) where the upstream tarball can
be available with different compression schemes. We need precisely one
file otherwise it doesn't know which one should be used and might pick the
wrong one.

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,9 @@ dpkg (1.14.28) UNRELEASED; urgency=low
     - fix dpkg-source to not complain on binary files that are ignored and are
       not going to be included in the debian tarball of a "3.0 (quilt)" source
       package. Closes: #524375
+    - let dpkg-source fail if several upstream orig.tar files are
+      available (using different compression scheme) since we don't know
+      which one to use.
 
  -- Raphael Hertzog <hertzog@debian.org>  Sun, 03 Jan 2010 18:21:35 +0100
 
