dpkg-source: fail if several orig.tar files are available
This concerns formats 2.0 and 3.0 (quilt) where the upstream tarball can
be available with different compression schemes. We need precisely one
file otherwise it doesn't know which one should be used and might pick the
wrong one.

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,9 @@ dpkg (1.15.5.3) UNRELEASED; urgency=low
     instead to directly get a pipe file descriptor. Closes: #557013
   * Put "3.0 (quilt)" in the default list of formats tried by dpkg-source
     after "1.0" and before "3.0 (native)".
+  * Let dpkg-source fail if several upstream orig.tar files are available
+    (using different compression scheme) since we don't know which one
+    to use.
 
   [ Guillem Jover ]
   * Verify that the alternative used in update-alternatives --set has been
