--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,7 @@
 dpkg (1.15.6) UNRELEASED; urgency=low
 
   [ Raphaël Hertzog ]
-  * debian/control: add the accent on my first name
+  * debian/control: Add the accent on my first name.
 
   [ Guillem Jover ]
   * Handle argument parsing in dpkg-checkbuilddeps and dpkg-scanpackages
@@ -18,7 +18,7 @@ dpkg (1.15.6) UNRELEASED; urgency=low
   [ Updated scripts translations ]
   * German (Helge Kreutzmann).
   * Swedish (Peter Krefting).
- 
+
  -- Raphaël Hertzog <hertzog@debian.org>  Tue, 17 Nov 2009 17:24:47 +0100
 
 dpkg (1.15.5.2) unstable; urgency=low
