u-a: Improve --display output
Use two leading spaces for current link and slave information. Use
single quotes for both “best” and the alternative it's pointing to.

Closes: #549167

--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,9 @@ dpkg (1.15.6) UNRELEASED; urgency=low
   * Add a --version option to dpkg-checkbuilddeps.
   * Improve and mark more messages in writedb() to make translators lifes
     easier. Closes: #408525
+  * Improve update-alternatives --display output to use two leading spaces
+    for current link and slave information. Use single quotes for both “best”
+    and the alternative it's pointing to. Closes: #549167
 
   [ Updated man page translations ]
   * German (Helge Kreutzmann).
