Refer to “half configured” instead of “failed config”
Use it in «dpkg-query -l» header and dselect package status printing for
consistency with the rest of the ouput. This seems to have been a source
of confusion in the past, so we'll try to use this nomenclature to refer
to this package status.

--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,8 @@ dpkg (1.15.6) UNRELEASED; urgency=low
   * Improve update-alternatives --display output to use two leading spaces
     for current link and slave information. Use single quotes for both “best”
     and the alternative it's pointing to. Closes: #549167
+  * Refer to “half configured” instead of “failed config” in «dpkg-query -l»
+    header and dselect package status printing for consistency.
 
   [ Updated man page translations ]
   * German (Helge Kreutzmann).
