Dpkg::Control::Hash: Strip leading spaces in the first line of a field's value
The fields in a compliant control-style file are allowed to have values
starting with any number of spaces. But that only applies to the first
line on multi-line field values, so do not do the same on subsequent
lines as those are handled differently.

Regression introduced in commit 7d8d193332478de82e20ed5b49053378801d160f.

Closes: #557547

--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,8 @@ dpkg (1.15.5.3) UNRELEASED; urgency=low
   * Verify that the alternative used in update-alternatives --set has been
     registered instead of failing with an undefined value in the slave
     method. Closes: #554136
+  * Strip leading spaces in the first line of a field's value in
+    Dpkg::Control::Hash. Closes: #557547
 
  -- Raphael Hertzog <hertzog@debian.org>  Sat, 21 Nov 2009 14:57:50 +0100
 
