Dpkg::Changelog::Entry::Debian: add missing "use Dpkg::Gettext"

--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,8 @@ dpkg (1.15.5.3) UNRELEASED; urgency=low
   * Let dpkg-source fail if several upstream orig.tar files are available
     (using different compression scheme) since we don't know which one
     to use.
+  * Add missing "use Dpkg::Gettext" in Dpkg::Changelog::Entry::Debian.
+    Closes: #557668
 
   [ Guillem Jover ]
   * Verify that the alternative used in update-alternatives --set has been
