Dpkg::Source::Package::V3::quilt: check debian/patches{,series} before build
Before accepting to build a 3.0 (quilt) source packages, ensure that
debian/patches is a directory (or non-existing) and that
debian/patches/series is a file (or non-existing).

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,9 @@ dpkg (1.14.28) UNRELEASED; urgency=low
     - let dpkg-source fail if several upstream orig.tar files are
       available (using different compression scheme) since we don't know
       which one to use.
+    - before accepting to build a 3.0 (quilt) source packages, ensure that
+      debian/patches is a directory (or non-existing) and that
+      debian/patches/series is a file (or non-existing). Closes: #557618
 
  -- Raphael Hertzog <hertzog@debian.org>  Sun, 03 Jan 2010 18:21:35 +0100
 
