--- a/debian/changelog
+++ b/debian/changelog
@@ -15,6 +15,8 @@ dpkg (1.15.6) UNRELEASED; urgency=low
     and the alternative it's pointing to. Closes: #549167
   * Refer to “half configured” instead of “failed config” in «dpkg-query -l»
     header and dselect package status printing for consistency.
+  * Make “dpkg-statoverride --quiet” actually do something, and quiesce
+    most of the inoquous warning messages. Closes: #403211
 
   [ Updated man page translations ]
   * German (Helge Kreutzmann).
