--- a/debian/changelog
+++ b/debian/changelog
@@ -12,7 +12,7 @@ dpkg (1.15.5.3) UNRELEASED; urgency=low
     Closes: #557668
   * When building "3.0 (quilt)" source packages, use QUILT_PATCH_OPTS="-t -F 0
     -N -u -V never -g0" so that quilt is as strict as dpkg-source's internal
-    implementation of quilt. Closes: #557664
+    implementation of quilt. Closes: #557664, #558233
   * Before accepting to build a 3.0 (quilt) source packages, ensure that
     debian/patches is a directory (or non-existing) and that
     debian/patches/series is a file (or non-existing). Closes: #557618
