--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-dpkg (1.15.5.3) UNRELEASED; urgency=low
+dpkg (1.15.5.3) unstable; urgency=low
 
   [ Raphael Hertzog ]
   * Avoid usage of IO::String in dpkg-scanpackages, rely on Dpkg::IPC
@@ -27,7 +27,7 @@ dpkg (1.15.5.3) UNRELEASED; urgency=low
   * Strip leading spaces in the first line of a field's value in
     Dpkg::Control::Hash. Closes: #557547
 
- -- Raphael Hertzog <hertzog@debian.org>  Sat, 21 Nov 2009 14:57:50 +0100
+ -- Guillem Jover <guillem@debian.org>  Fri, 27 Nov 2009 19:23:36 +0100
 
 dpkg (1.15.5.2) unstable; urgency=low
 
