Make the translation of "original" consistent

--- a/debian/changelog
+++ b/debian/changelog
@@ -24,6 +24,8 @@ dpkg (1.15.6) UNRELEASED; urgency=low
   [ Updated man page translations ]
   * German (Helge Kreutzmann).
   * Swedish (Peter Krefting).
+  * French (Christian Perrier): correcting inconsistencies for the translation
+    of "original" here and there. Thanks to Julien Valroff for pointing this.
 
   [ Updated scripts translations ]
   * German (Helge Kreutzmann).
