Dpkg::Source::Package::V3::quilt: create and use .pc directory
Instead of calling quilt to apply patches, we always apply them
by hand and we create the .pc directory used by quilt (version 2 in
.pc/.version). That way we are fully compatible with quilt and we can't
have differing behaviour whether quilt is installed or not.

Update the documentation accordingly. The option --without-quilt is gone
as is debian/patches/.dpkg-source-applied (replaced by
.pc/applied-patches).

--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,11 @@ dpkg (1.14.28) UNRELEASED; urgency=low
     - before accepting to build a 3.0 (quilt) source packages, ensure that
       debian/patches is a directory (or non-existing) and that
       debian/patches/series is a file (or non-existing). Closes: #557618
+    - modify implementation of "3.0 (quilt)" source format to not be
+      behave differently depending on whether quilt is installed or not.
+      The option --without-quilt is thus gone and dpkg-source creates and
+      relies on the .pc directory to know whether patches are applied or
+      not. Closes: #557667
 
  -- Raphael Hertzog <hertzog@debian.org>  Sun, 03 Jan 2010 18:21:35 +0100
 
