dpkg-source: support --single-debian-patch for "3.0 (quilt)"
With this option, the automatic patch is named
debian/patches/debian-changes instead of
debian/patches/debian-changes-<ver>. With this option, the new format
is closer to 1.0 with its single diff that is always updated.

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,10 @@ dpkg (1.15.5.4) UNRELEASED; urgency=low
     The option --without-quilt is thus gone and dpkg-source creates
     and relies on the .pc directory to know whether patches are applied
     or not. Closes: #557667
+  * Add new dpkg-source option --single-debian-patch supported by the source
+    format "3.0 (quilt)" so that it behaves more like 1.0 and its single diff
+    that is constantly updated with all upstream changes. Useful if the
+    workflow is VCS based and can't generate a full patch set.
 
  -- Raphael Hertzog <hertzog@debian.org>  Sun, 29 Nov 2009 18:15:16 +0100
 
