dpkg-source: verify version of the quilt metadata before build
Since format "3.0 (quilt)" can now modify the content of the .pc
directory, ensure it still uses the supported format (currently version
2). Add an option --allow-version-of-quilt-db=<ver> to be able
to force creation of a source package despite the unexpected version.

--- a/man/dpkg-source.1
+++ b/man/dpkg-source.1
@@ -414,6 +414,14 @@ behaviour.
 .PP
 .B Build options
 .TP
+.BI \-\-allow\-version\-of\-quilt\-db= version
+Allow \fBdpkg\-source\fP to build the source package if the version of
+the quilt metadata is the one specified, even if \fBdpkg\-source\fP
+doesn't know about it. Effectively this says that the given version of the
+quilt metadata is compatible with the version 2 that \fBdpkg\-source\fP
+currently supports. The version of the quilt metadata is stored in
+\fB.pc/.version\fP.
+.TP
 .B \-\-include\-removal
 Do not ignore removed files and include them in the automatically
 generated patch.
