Dpkg::Index: fix get() and remove() methods
They were using non-existing get_by_keys() method instead of get_keys().

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+dpkg (1.15.5.4) UNRELEASED; urgency=low
+
+  * Fix Dpkg::Index::get() and remove(). Thanks to Roderich Schupp
+    <roderich.schupp@googlemail.com> for the patch. Closes: #558595
+
+ -- Raphael Hertzog <hertzog@debian.org>  Sun, 29 Nov 2009 18:15:16 +0100
+
 dpkg (1.15.5.3) unstable; urgency=low
 
   [ Raphael Hertzog ]
