Update German scripts translation
Update to 488t.

--- a/scripts/po/de.po
+++ b/scripts/po/de.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: dpkg scripts\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2009-11-27 18:45+0100\n"
-"PO-Revision-Date: 2009-11-23 19:29+0100\n"
+"PO-Revision-Date: 2009-11-30 18:31+0100\n"
 "Last-Translator: Helge Kreutzmann <debian@helgefjell.de>\n"
 "Language-Team: de <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -2943,6 +2943,7 @@ msgstr "-b akzeptiert nur einen Parameter mit dem Format »%s«"
 #, perl-format
 msgid "several orig.tar files found (%s and %s) but only one is allowed"
 msgstr ""
+"mehrere orig.tar-Dateien gefunden (%s und %s), aber nur eine ist erlaubt"
 
 #: scripts/Dpkg/Source/Package/V2.pm:287
 msgid "copy of the debian directory"
@@ -3141,12 +3142,12 @@ msgstr "Die folgende(n) Einstellungen wurden von dpkg-source deaktiviert"
 #: scripts/Dpkg/Source/Package/V3/quilt.pm:64
 #, perl-format
 msgid "%s should be a directory or non-existing"
-msgstr ""
+msgstr "%s sollte ein Verzeichnis sein oder nicht existieren"
 
 #: scripts/Dpkg/Source/Package/V3/quilt.pm:70
 #, perl-format
 msgid "%s should be a file or non-existing"
-msgstr ""
+msgstr "%s sollte eine Datei sein oder nicht existieren"
 
 #: scripts/Dpkg/Source/Package/V3/quilt.pm:106
 #, perl-format
