Updated Simplified Chinese translation

--- a/debian/changelog
+++ b/debian/changelog
@@ -29,6 +29,9 @@ dpkg (1.15.6) UNRELEASED; urgency=low
 
   [ Updated scripts translations ]
   * German (Helge Kreutzmann).
+
+  [ Updated programs translations ]
+  * Simplified Chinese (Aron Xua). Closes: #558794
   * Swedish (Peter Krefting).
 
  -- Raphaël Hertzog <hertzog@debian.org>  Tue, 17 Nov 2009 17:24:47 +0100
