--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,8 @@ dpkg (1.15.6) UNRELEASED; urgency=low
   * Perl API cleanup:
     - rename Dpkg::Deps dump() methods into output([$fh]), overload string
       representation ("$dep") to provide the result of $dep->output()
+    - prefix public functions in Dpkg::Deps with deps_ and export them
+      by default
 
   [ Guillem Jover ]
   * Handle argument parsing in dpkg-checkbuilddeps and dpkg-scanpackages
