--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,7 @@ dpkg (1.15.5.4) UNRELEASED; urgency=low
     workflow is VCS based and can't generate a full patch set.
   * dpkg-source now uses debian/source/patch-header as header of the automatic
     Debian patch in format "3.0 (quilt)".
+  * Fix Debian changelog parser so that the trailer line is again checked.
 
  -- Raphael Hertzog <hertzog@debian.org>  Sun, 29 Nov 2009 18:15:16 +0100
 
